# raypoketrack

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVICES.md  FORMATS.md  Info.plist.in  LICENSE  Makefile  README.md  midi2rpt.py  midi2rptp.py  song.rpt  upgrade_rpt.py
.github/workflows/: pages.yml  release.yml
examples/beats/Afro Cuban/: Bossa Nova.rpt  Bouton.rpt  Gahu.rpt  Rumba.rpt  Shiko.rpt  Son Clave.rpt  Soukous.rpt
examples/beats/Afro-Cuban/: Bossa Nova.rpt  Bossa Nova.rptp  Bouton.rpt  Bouton.rptp  Gahu.rpt  Gahu.rptp  Rumba.rpt  Rumba.rptp  Shiko.rpt  Shiko.rptp  Son Clave.rpt  Son Clave.rptp  Soukous.rpt  Soukous.rptp
examples/beats/Basic Patterns/: Boots N Cats.rpt  Boots N Cats.rptp  Good To Go.rpt  Good To Go.rptp  Hip Hop.rpt  Hip Hop.rptp  One And Seven & Five And Thirteen.rpt  One And Seven Five And Thirteen.rpt  Tiny House.rpt  Tiny House.rptp
examples/beats/Breaks + Alternate Endings/: Follow With Hybrid Break 7 - B ↳.rpt  Follow With Hybrid Break 7 - B ↳.rptp  Follow With Hybrid Break 8 - B ↳.rpt  Follow With Hybrid Break Ending 1 ↳.rpt  Follow With Hybrid Break Ending 1 ↳.rptp  Hybrid 8 - A.rpt  Hybrid 8 - A.rptp  Hybrid Kick 7 - A.rpt  Hybrid Kick.rpt  Hybrid Kick.rptp  Or Follow With Hybrid Break Ending 2 ↳.rpt  Or Follow With Hybrid Break Ending 2 ↳.rptp  Or Follow With Hybrid Break Ending 3 ↳.rpt  Or Follow With Hybrid Break Ending 3 ↳.rptp  Or Follow With Hybrid Break Ending 4 ↳.rpt  Or Follow With Hybrid Break Ending 4 ↳.rptp  Or Follow With Hybrid Break Ending 5 ↳.rpt  Or Follow With Hybrid Break Ending 6 ↳.rpt  Or Follow With Hybrid Break Ending 6 ↳.rptp
examples/beats/Breaks - Kick/: Contemporary Kick 1 - A.rpt  Contemporary Kick 1 - B.rpt  Contemporary Kick 1 - B.rptp  Contemporary Kick 2 - A.rpt  Contemporary Kick 2 - A.rptp  Contemporary Kick 2 - B.rpt  Contemporary Kick 2 - B.rptp  Contemporary Kick 3 - A.rpt  Contemporary Kick 3 - A.rptp  Contemporary Kick 3 - B.rpt  Contemporary Kick 4.rpt  Contemporary Kick 4.rptp
examples/beats/Breaks - Snare/: Contemporary Snare 1 - A.rpt  Contemporary Snare 1 - A.rptp  Contemporary Snare 1 - B.rpt  Contemporary Snare 1 - B.rptp  Contemporary Snare 2 - A.rpt  Contemporary Snare 2 - A.rptp  Contemporary Snare 2 - B.rpt  Contemporary Snare 2 - B.rptp  Contemporary Snare 3 - A.rpt  Contemporary Snare 3 - A.rptp  Contemporary Snare 3 - B.rpt  Contemporary Snare 3 - B.rptp  Unconventional Snare 1 - A.rpt  Unconventional Snare 1 - A.rptp  Unconventional Snare 1 - B.rpt  Unconventional Snare 1 - B.rptp  Unconventional Snare 2 - A.rpt  Unconventional Snare 2 - A.rptp  Unconventional Snare 2 - B.rpt  Unconventional Snare 3 - A.rpt  Unconventional Snare 3 - A.rptp  Unconventional Snare 3 - B.rpt  Unconventional Snare 3 - B.rptp  (+4 more)
ports/: Enable SSH.sh  RayPokeTrack.sh  Update RayPokeTrack.sh
src/: audio.c  audio.h  bip39_en.h  clap_host.c  clap_host.h  file_browser.c  file_browser.h  input.c  input.h  macos_dialog.h  macos_dialog.m  main.c  midi_in.c  midi_in.h  midi_out.c  midi_out.h  screen_chain.c  screen_instrument.c  screen_menu.c  screen_pattern.c  screen_song.c  synth.c  synth.h  tracker.c  tracker.h  ui.c  ui.h
src/units/: README.md  bitcrush.c  chorus.c  clap_unit.c  compressor.c  delay.c  dist.c  drum.c  ducker.c  filter.c  flanger.c  fm.c  gran.c  lfo.c  midi_unit.c  osc.c  phaser.c  reverb.c  sampler.c  sf2.c  sfz.c  tremolo.c  unit.h  unit_registry.c  unit_registry.h
test_clap_plugin/: test_clap.c
webroot/: basic.rpt  index.html  raypoketrack.mjs  site.webmanifest
(+585 files in other folders)
